# law-buddy

./: .gitignore  README.md  TODO.md  environment.yml  environment_full.yml  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
data/05_model_input/: context.pkl
notebooks/: Compute Context.ipynb  Compute Embeddings.ipynb  Insights.ipynb  Q&A Model Output.ipynb  Working In Colab with Kedro.ipynb
src/law_buddy/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/law_buddy/extras/: api.py  hf.py
src/law_buddy/pipelines/: data.py  embeddings.py  model.py  pipeline.py  tools.py
tests/: test_run.py
