[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "law_buddy"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
law-buddy = "law_buddy.__main__:main"

[tool.kedro]
package_name = "law_buddy"
project_name = "law-buddy"
kedro_init_version = "0.19.2"
tools = [ "Linting", "Testing", "Custom Logging", "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/law_buddy -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "environment.yml"

[tool.setuptools.dynamic.version]
attr = "law_buddy.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
